# TAID

./: .gitignore  README.md  convert_l_to_hf.py  hello.py  prepare_ultrachat.py  pyproject.toml  requirements.txt  train.py  upload.py
scripts/calm3/: taid.sh
scripts/llama-2/: adaptive_kl.sh  ctkd.sh  distillm.sh  dkd.sh  fkl.sh  gkd.sh  rkl.sh  sft.sh  taid.sh  tvd.sh
scripts/phi-3/: adaptive_kl.sh  ctkd.sh  distillm.sh  dkd.sh  fkl.sh  gkd.sh  rkl.sh  sft.sh  taid.sh  tvd.sh
scripts/qwen2.5/: taid.sh
scripts/stablelm/: adaptive_kl.sh  ctkd.sh  distillm.sh  dkd.sh  fkl.sh  gkd.sh  rkl.sh  sft.sh  taid.sh  tvd.sh
src/: arguments.py  data.py  loss.py  metrics.py  model.py  sampler.py  utils.py
src/build_dataset/: arrange_distillation_dataset.py  integrate_distillation_dataset.py
src/distil_losses/: adaptive_kl.py  base.py  ctkd.py  dkd.py  fkl.py  js.py  rkl.py  skew_fkl.py  skew_rkl.py  taid.py  tvd.py
