[project]
name = "taid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "absl-py==2.1.0",
    "accelerate==0.28.0",
    "datasets==2.18.0",
    "deepspeed==0.14.0",
    "evaluate==0.4.1",
    "lightning==2.2.3",
    "litdata==0.2.15",
    "natsort==8.4.0",
    "nltk==3.8.1",
    "numerize==0.12",
    "numpy==1.26.4",
    "protobuf==3.20.3",
    "rich==13.7.1",
    "rouge-score==0.1.2",
    "sentencepiece==0.2.0",
    "torch==2.2.2",
    "torchtyping==0.1.4",
    "transformers==4.41.2",
    "wandb==0.16.6",
]
